layout collapse bug fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -31,7 +31,7 @@
   border: 1px solid rgba(0, 0, 0, 0.2);
   font-size: 15px;
   letter-spacing: 1px;
-  border-radius: 2px;
+  border-radius: 1px;
 }
 
 .filterBtn:hover {
@@ -87,7 +87,20 @@
 @media screen and (max-width: 600px) {
   .svg {
     width: 300px;
-    height: 450px;
+    height: 250px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .filterBtnGroup {
+    grid-template-columns: auto;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .svg {
+    width: 250px;
+    height: 200px;
   }
 }
 
